--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>booshop</title>
+  <title>FunkyShop</title>
   <!--Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
 
   <!--Navbar-->
   <nav class="navbar">
-    <h1 class="navbar">BooShop06</h1>
+    <h1 class="navbar">FunkyShop</h1>
     <div class="navbar-links">
       <p class="navbar-link"><a href="index.html">home</a></p>
       <p class="navbar-link"><a href="collection.html">collection</a></p>
