create the title name

--- a/collection.html
+++ b/collection.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>booshop</title>
+    <title>FunkyShop</title>
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 
     <!--Navbar-->
     <nav class="navbar">
-        <h1 class="navbar">BooShop06</h1>
+        <h1 class="navbar">FunkyShop</h1>
         <div class="navbar-links">
             <p class="navbar-link"><a href="index.html">home</a></p>
             <p class="navbar-link"><a href="collection.html">collection</a></p>
@@ -91,7 +91,7 @@
     <div class="footer">
         <div class="footer-container">
             <div class="footerbox-1">
-                <h1>booshop</h1>
+                <h1>FunkyShop</h1>
                 <p>seasonal trend rundowns and outfit inspiration to personal style spotlights and
                     sustainable fashion discussions</p>
             </div>
@@ -101,7 +101,7 @@
                 <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
             </div>
         </div>
-        <p>booshop3929@gmail.com</p>
+        <p>Funkyshop3929@gmail.com</p>
     </div>
 
 
