--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div class="footer">
     <div class="footer-container">
       <div class="footerbox-1">
-        <h1>booshop</h1>
+        <h1>FunkyShop</h1>
         <p>seasonal trend rundowns and outfit inspiration to personal style spotlights and
           sustainable fashion discussions</p>
       </div>
@@ -157,7 +157,7 @@
         <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
       </div>
     </div>
-    <p>booshop3929@gmail.com</p>
+    <p>Funkyshop3929@gmail.com</p>
   </div>
 
 
